--- a/about.html
+++ b/about.html
@@ -1,209 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <img
-            src="./imgs/logo.svg"
-            alt="logo"
-            class="navbar__logo"
-            width="236"
-            height="26"
-          />
-          <ul class="nav__list">
-            <li class="list__item">
-              <a class="nav__link" href="./index.html">HOME</a>
-            </li>
-            <li class="list__item">
-              <a class="nav__link" href="./about.html">ABOUT US</a>
-            </li>
-            <li class="list__item">
-              <a class="nav__link" href="#">Create your plan</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="container">
-        <!-- abaout us section -->
-        <section class="aboutus">
-          <div class="aboutus__left">
-            <h1 class="aboutus__left__title titles">About Us</h1>
-            <p class="aboutus__left__description texts">
-              Coffeeroasters began its journey of exotic discovery in 1999,
-              highlighting stories of coffee from around the world. We have
-              since been dedicated to bring the perfect cup - from bean to brew
-              - in every shipment.
-            </p>
-          </div>
-        </section>
-        <!-- commit section -->
-        <section class="commit">
-          <img
-            src="./imgs/bitmab.png"
-            alt=" a man with coffee"
-            class="commit__left"
-            width="445"
-            height="520"
-          />
-          <div class="commit__right">
-            <h2 class="commit__right__title titles">Our commitment</h2>
-            <p class="commit__right__description texts">
-              We’re built on a simple mission and a commitment to doing good
-              along the way. We want to make it easy for you to discover and
-              brew the world’s best coffee at home. It all starts at the source.
-              To locate the specific lots we want <br />
-              to purchase, we travel nearly 60 days a year trying to understand
-              the challenges and opportunities in each of these places. We
-              collaborate with exceptional coffee growers and empower a global
-              community of farmers through with well above fair-trade
-              benchmarks. We also offer training, support farm community
-              initiatives, and invest in coffee plant science. Curating only the
-              finest blends, we roast each lot to highlight tasting profiles
-              distinctive to their native growing region.
-            </p>
-          </div>
-        </section>
-        <!-- quality section -->
-        <section class="quality">
-          <div class="quality__left">
-            <h2 class="commit__right__title titles quality__left__title">
-              Uncompromising quality
-            </h2>
-            <p
-              class="commit__right__description texts quality__left__description"
-            >
-              Although we work with growers who pay close attention to all
-              stages of harvest and processing, we employ, on our end, a
-              rigorous quality control program to avoid over-roasting or baking
-              the coffee dry. Every bag of coffee is tagged with a roast date
-              and batch number. Our goal is to roast consistent, user-friendly
-              coffee, so that brewing is easy and enjoyable.
-            </p>
-          </div>
-          <img
-            class="quality__img"
-            src="./imgs/quality.png"
-            alt="the quality section image"
-            width="445"
-            height="474"
-          />
-        </section>
-        <!-- headquarter section -->
-        <section class="headquarter">
-          <h2 class="headquarter__title titles">Our headquarters</h2>
-          <div class="headquarter__cards">
-            <div class="headquarter__cards__one">
-              <img
-                src="./imgs/united-kingdom.svg"
-                alt="shape of united Kingdom"
-                width="41"
-                height="50"
-              />
-              <h3 class="headquarter__cards__one__title titles">
-                United Kingdom
-              </h3>
-              <p class="headquarter__cards__one-description texts">
-                68 Asfordby Rd <br />
-                Alcaston <br />
-                SY6 1YA <br />
-                +44 1241 918425
-              </p>
-            </div>
-            <div class="headquarter__cards__one">
-              <img
-                src="./imgs/canada.svg"
-                alt="shape of camada"
-                width="51"
-                height="49"
-              />
-              <h3 class="headquarter__cards__one__title titles">Canada</h3>
-              <p class="headquarter__cards__one-description texts">
-                1528 Eglinton Avenue <br />
-                Toronto <br />
-                Ontario M4P 1A6 <br />
-                +1 416 485 2997
-              </p>
-            </div>
-            <div class="headquarter__cards__one">
-              <img
-                src="./imgs/australia.svg"
-                alt="shape of australia"
-                width="49"
-                height="43"
-              />
-              <h3 class="headquarter__cards__one__title titles">Australia</h3>
-              <p class="headquarter__cards__one-description texts">
-                36 Swanston Street <br />
-                Kewell <br />
-                Victoria <br />
-                +61 4 9928 3629
-              </p>
-            </div>
-          </div>
-        </section>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container footer__section">
-        <div class="footer__nav">
-          <a href="#">
-            <img
-              src="./imgs/footer.svg "
-              alt="logo"
-              class="logo"
-              width="236"
-              height="26"
-            />
-          </a>
-          <ul class="footer__nav__list">
-            <li class="list__item">
-              <a class="footer__nav__link" href="#">HOME</a>
-            </li>
-            <li class="list__item">
-              <a class="footer__nav__link" href="#">ABOUT US</a>
-            </li>
-            <li class="list__item">
-              <a class="footer__nav__link" href="#">Create your plan</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__networks">
-          <a href="#" class="footer__networks_icon">
-            <img
-              src="./imgs/facebook.svg"
-              alt="facebook"
-              width="24"
-              height="24"
-            />
-          </a>
-          <a href="#" class="footer__networks_icon">
-            <img
-              src="./imgs/twitter.svg"
-              alt="twitter"
-              width="24"
-              height="24"
-            />
-          </a>
-          <a href="#" class="footer__networks_icon">
-            <img
-              src="./imgs/instagram.svg"
-              alt="instagram"
-              width="24"
-              height="24"
-            />
-          </a>
-        </div>
-      </div>
-    </footer>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/main.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<nav class="nav">
+					<img
+						src="./imgs/logo.svg"
+						alt="logo"
+						class="navbar__logo"
+						width="236"
+						height="26" />
+					<ul class="nav__list">
+						<li class="list__item">
+							<a class="nav__link" href="./index.html">HOME</a>
+						</li>
+						<li class="list__item">
+							<a class="nav__link" href="./about.html"
+								>ABOUT US</a
+							>
+						</li>
+						<li class="list__item">
+							<a class="nav__link" href="#">Create your plan</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<div class="container">
+				<!-- abaout us section -->
+				<section class="aboutus">
+					<div class="aboutus__left">
+						<h1 class="aboutus__left__title titles">About Us</h1>
+						<p class="aboutus__left__description texts">
+							Coffeeroasters began its journey of exotic discovery
+							in 1999, highlighting stories of coffee from around
+							the world. We have since been dedicated to bring the
+							perfect cup - from bean to brew - in every shipment.
+						</p>
+					</div>
+				</section>
+				<!-- commit section -->
+				<section class="commit">
+					<img
+						src="./imgs/bitmab.png"
+						alt=" a man with coffee"
+						class="commit__left"
+						width="445"
+						height="520" />
+					<div class="commit__right">
+						<h2 class="commit__right__title titles">
+							Our commitment
+						</h2>
+						<p class="commit__right__description texts">
+							We’re built on a simple mission and a commitment to
+							doing good along the way. We want to make it easy
+							for you to discover and brew the world’s best coffee
+							at home. It all starts at the source. To locate the
+							specific lots we want <br />
+							to purchase, we travel nearly 60 days a year trying
+							to understand the challenges and opportunities in
+							each of these places. We collaborate with
+							exceptional coffee growers and empower a global
+							community of farmers through with well above
+							fair-trade benchmarks. We also offer training,
+							support farm community initiatives, and invest in
+							coffee plant science. Curating only the finest
+							blends, we roast each lot to highlight tasting
+							profiles distinctive to their native growing region.
+						</p>
+					</div>
+				</section>
+				<!-- quality section -->
+				<section class="quality">
+					<div class="quality__left">
+						<h2
+							class="commit__right__title titles quality__left__title">
+							Uncompromising quality
+						</h2>
+						<p
+							class="commit__right__description texts quality__left__description">
+							Although we work with growers who pay close
+							attention to all stages of harvest and processing,
+							we employ, on our end, a rigorous quality control
+							program to avoid over-roasting or baking the coffee
+							dry. Every bag of coffee is tagged with a roast date
+							and batch number. Our goal is to roast consistent,
+							user-friendly coffee, so that brewing is easy and
+							enjoyable.
+						</p>
+					</div>
+					<img
+						class="quality__img"
+						src="./imgs/quality.png"
+						alt="the quality section image"
+						width="445"
+						height="474" />
+				</section>
+				<!-- headquarter section -->
+				<section class="headquarter">
+					<h2 class="headquarter__title titles">Our headquarters</h2>
+					<div class="headquarter__cards">
+						<div class="headquarter__cards__one">
+							<img
+								src="./imgs/united-kingdom.svg"
+								alt="shape of united Kingdom"
+								width="41"
+								height="50" />
+							<h3 class="headquarter__cards__one__title titles">
+								United Kingdom
+							</h3>
+							<p
+								class="headquarter__cards__one-description texts">
+								68 Asfordby Rd <br />
+								Alcaston <br />
+								SY6 1YA <br />
+								+44 1241 918425
+							</p>
+						</div>
+						<div class="headquarter__cards__one">
+							<img
+								src="./imgs/canada.svg"
+								alt="shape of camada"
+								width="51"
+								height="49" />
+							<h3 class="headquarter__cards__one__title titles">
+								Canada
+							</h3>
+							<p
+								class="headquarter__cards__one-description texts">
+								1528 Eglinton Avenue <br />
+								Toronto <br />
+								Ontario M4P 1A6 <br />
+								+1 416 485 2997
+							</p>
+						</div>
+						<div class="headquarter__cards__one">
+							<img
+								src="./imgs/australia.svg"
+								alt="shape of australia"
+								width="49"
+								height="43" />
+							<h3 class="headquarter__cards__one__title titles">
+								Australia
+							</h3>
+							<p
+								class="headquarter__cards__one-description texts">
+								36 Swanston Street <br />
+								Kewell <br />
+								Victoria <br />
+								+61 4 9928 3629
+							</p>
+						</div>
+					</div>
+				</section>
+			</div>
+		</main>
+		<footer class="footer">
+			<div class="container footer__section">
+				<div class="footer__nav">
+					<a href="#">
+						<img
+							src="./imgs/footer.svg "
+							alt="logo"
+							class="logo"
+							width="236"
+							height="26" />
+					</a>
+					<ul class="footer__nav__list">
+						<li class="list__item">
+							<a class="footer__nav__link" href="#">HOME</a>
+						</li>
+						<li class="list__item">
+							<a class="footer__nav__link" href="#">ABOUT US</a>
+						</li>
+						<li class="list__item">
+							<a class="footer__nav__link" href="#"
+								>Create your plan</a
+							>
+						</li>
+					</ul>
+				</div>
+				<div class="footer__networks">
+					<a href="#" class="footer__networks_icon">
+						<img
+							src="./imgs/facebook.svg"
+							alt="facebook"
+							width="24"
+							height="24" />
+					</a>
+					<a href="#" class="footer__networks_icon">
+						<img
+							src="./imgs/twitter.svg"
+							alt="twitter"
+							width="24"
+							height="24" />
+					</a>
+					<a href="#" class="footer__networks_icon">
+						<img
+							src="./imgs/instagram.svg"
+							alt="instagram"
+							width="24"
+							height="24" />
+					</a>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
