--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 							<a class="nav__link" href="#">HOME</a>
 						</li>
 						<li class="list__item">
-							<a class="nav__link" href="./about.html"
-								>ABOUT US</a
-							>
+							<a class="nav__link" href="./about.html">ABOUT US</a>
 						</li>
 						<li class="list__item">
 							<a class="nav__link" href="#">Create your plan</a>
@@ -38,26 +36,19 @@
 			<div class="container">
 				<section class="hero__box">
 					<div class="hero">
-						<h1 class="hero__title titles">
-							Great coffee made simple.
-						</h1>
+						<h1 class="hero__title titles">Great coffee made simple.</h1>
 						<p class="hero__subtitle texts">
-							Start your mornings with the world’s best coffees.
-							Try our expertly curated artisan coffees from our
-							best roasters <br />
+							Start your mornings with the world’s best coffees. Try our expertly
+							curated artisan coffees from our best roasters <br />
 							delivered directly to your door, at your schedule.
 						</p>
-						<a href="#" class="hero__btn titles"
-							>Create your plan</a
-						>
+						<a href="#" class="hero__btn titles">Create your plan</a>
 					</div>
 				</section>
 				<!-- collection section -->
 				<section class="collection">
 					<div class="collection__title">
-						<h2 class="collection__title__box titles">
-							our collection
-						</h2>
+						<h2 class="collection__title__box titles">our collection</h2>
 					</div>
 					<div class="collection__cards">
 						<div class="card">
@@ -68,8 +59,8 @@
 								height="193" />
 							<h3 class="card__title titles">Gran Espresso</h3>
 							<p class="card__description texts">
-								Light and flavorful blend with cocoa and black
-								pepper for an intense experience
+								Light and flavorful blend with cocoa and black pepper for an intense
+								experience
 							</p>
 						</div>
 						<div class="card__one">
@@ -80,8 +71,8 @@
 								height="193" />
 							<h3 class="card__title titles">Planalto</h3>
 							<p class="card__description texts">
-								Brazilian dark roast with rich and velvety body,
-								and hints of fruits and nuts
+								Brazilian dark roast with rich and velvety body, and hints of fruits
+								and nuts
 							</p>
 						</div>
 						<div class="card__one">
@@ -92,8 +83,8 @@
 								height="193" />
 							<h3 class="card__title titles">Piccollo</h3>
 							<p class="card__description texts">
-								Mild and smooth blend featuring notes of toasted
-								almond and dried cherry
+								Mild and smooth blend featuring notes of toasted almond and dried
+								cherry
 							</p>
 						</div>
 						<div class="card__one">
@@ -104,8 +95,8 @@
 								height="193" />
 							<h3 class="card__title titles">Danche</h3>
 							<p class="card__description texts">
-								Ethiopian hand-harvested blend densely packed
-								with vibrant fruit notes
+								Ethiopian hand-harvested blend densely packed with vibrant fruit
+								notes
 							</p>
 						</div>
 					</div>
@@ -114,15 +105,12 @@
 				<section class="choose__section">
 					<div class="choose">
 						<div class="choose__description">
-							<h2 class="choose__description__title titles">
-								Why choose us?
-							</h2>
+							<h2 class="choose__description__title titles">Why choose us?</h2>
 							<p class="choose__description__text texts">
-								A large part of our role is choosing which
-								particular coffees will be featured in our
-								range. This means working closely with the best
-								coffee growers to give you a more impactful
-								experience on every level.
+								A large part of our role is choosing which particular coffees will
+								be featured in our range. This means working closely with the best
+								coffee growers to give you a more impactful experience on every
+								level.
 							</p>
 						</div>
 						<div class="choose__cards">
@@ -132,15 +120,12 @@
 									alt="coffe icon"
 									width="72"
 									height="72" />
-								<h3
-									class="card__title titles choose__cards__one__title">
+								<h3 class="card__title titles choose__cards__one__title">
 									Best quality
 								</h3>
-								<p
-									class="card__description texts choose__cards__one__description">
-									Discover an endless variety of the world’s
-									best artisan coffee from each of our
-									roasters.
+								<p class="card__description texts choose__cards__one__description">
+									Discover an endless variety of the world’s best artisan coffee
+									from each of our roasters.
 								</p>
 							</div>
 							<div class="choose__cards__one">
@@ -149,15 +134,12 @@
 									alt="coffe icon"
 									width="72"
 									height="72" />
-								<h3
-									class="card__title titles choose__cards__one__title">
+								<h3 class="card__title titles choose__cards__one__title">
 									Best quality
 								</h3>
-								<p
-									class="card__description texts choose__cards__one__description">
-									Discover an endless variety of the world’s
-									best artisan coffee from each of our
-									roasters.
+								<p class="card__description texts choose__cards__one__description">
+									Discover an endless variety of the world’s best artisan coffee
+									from each of our roasters.
 								</p>
 							</div>
 							<div class="choose__cards__one">
@@ -166,15 +148,12 @@
 									alt="coffe icon"
 									width="72"
 									height="72" />
-								<h3
-									class="card__title titles choose__cards__one__title">
+								<h3 class="card__title titles choose__cards__one__title">
 									Best quality
 								</h3>
-								<p
-									class="card__description texts choose__cards__one__description">
-									Discover an endless variety of the world’s
-									best artisan coffee from each of our
-									roasters.
+								<p class="card__description texts choose__cards__one__description">
+									Discover an endless variety of the world’s best artisan coffee
+									from each of our roasters.
 								</p>
 							</div>
 						</div>
@@ -193,54 +172,42 @@
 						<div class="howitworks__main__cards">
 							<div class="howitworks-card">
 								<h3 class="howitworks__number titles">01</h3>
-								<h3
-									class="card__title titles howitworks__card__title">
+								<h3 class="card__title titles howitworks__card__title">
 									Pick your <br />
 									coffee
 								</h3>
-								<p
-									class="card__description texts howitworks__card__description">
-									Select from our evolving range of artisan
-									coffees. Our beans are ethically sourced and
-									we pay fair prices for them. There are new
-									coffees in all profiles every month for you
-									to try out.
+								<p class="card__description texts howitworks__card__description">
+									Select from our evolving range of artisan coffees. Our beans are
+									ethically sourced and we pay fair prices for them. There are new
+									coffees in all profiles every month for you to try out.
 								</p>
 							</div>
 							<div class="howitworks-card">
 								<h3 class="howitworks__number titles">02</h3>
-								<h3
-									class="card__title titles howitworks__card__title">
+								<h3 class="card__title titles howitworks__card__title">
 									Choose the <br />
 									frequency
 								</h3>
-								<p
-									class="card__description texts howitworks__card__description">
-									Customize your order frequency, quantity,
-									even your roast style and grind type. Pause,
-									skip or cancel your subscription with no
+								<p class="card__description texts howitworks__card__description">
+									Customize your order frequency, quantity, even your roast style
+									and grind type. Pause, skip or cancel your subscription with no
 									commitment through our online portal.
 								</p>
 							</div>
 							<div class="howitworks-card">
 								<h3 class="howitworks__number titles">03</h3>
-								<h3
-									class="card__title titles howitworks__card__title">
+								<h3 class="card__title titles howitworks__card__title">
 									Receive and <br />
 									enjoy!
 								</h3>
-								<p
-									class="card__description texts howitworks__card__description">
-									We ship your package within 48 hours,
-									freshly roasted. Sit back and enjoy
-									award-winning world-class coffees curated to
-									provide a distinct tasting experience.
+								<p class="card__description texts howitworks__card__description">
+									We ship your package within 48 hours, freshly roasted. Sit back
+									and enjoy award-winning world-class coffees curated to provide a
+									distinct tasting experience.
 								</p>
 							</div>
 						</div>
-						<a href="#" class="howitworks__main__btn titles"
-							>Create your plan</a
-						>
+						<a href="#" class="howitworks__main__btn titles">Create your plan</a>
 					</div>
 				</section>
 			</div>
@@ -264,33 +231,19 @@
 							<a class="footer__nav__link" href="#">ABOUT US</a>
 						</li>
 						<li class="list__item">
-							<a class="footer__nav__link" href="#"
-								>Create your plan</a
-							>
+							<a class="footer__nav__link" href="#">Create your plan</a>
 						</li>
 					</ul>
 				</div>
 				<div class="footer__networks">
 					<a href="#" class="footer__networks_icon">
-						<img
-							src="./imgs/facebook.svg"
-							alt="facebook"
-							width="24"
-							height="24" />
+						<img src="./imgs/facebook.svg" alt="facebook" width="24" height="24" />
 					</a>
 					<a href="#" class="footer__networks_icon">
-						<img
-							src="./imgs/twitter.svg"
-							alt="twitter"
-							width="24"
-							height="24" />
+						<img src="./imgs/twitter.svg" alt="twitter" width="24" height="24" />
 					</a>
 					<a href="#" class="footer__networks_icon">
-						<img
-							src="./imgs/instagram.svg"
-							alt="instagram"
-							width="24"
-							height="24" />
+						<img src="./imgs/instagram.svg" alt="instagram" width="24" height="24" />
 					</a>
 				</div>
 			</div>
