--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 							>
 						</li>
 						<li class="list__item">
-							<a class="nav__link" href="#">Create your plan</a>
+							<a class="nav__link" href="./subscribe.html">Create your plan</a>
 						</li>
 					</ul>
 				</nav>
