--- a/subscribe.html
+++ b/subscribe.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/main.css" />
-		<title>Document</title>
+		<title>subscribe</title>
 	</head>
 	<body>
 		<header class="header">
@@ -19,7 +19,7 @@
 						height="26" />
 					<ul class="nav__list">
 						<li class="list__item">
-							<a class="nav__link" href="#">HOME</a>
+							<a class="nav__link" href="./index.html">HOME</a>
 						</li>
 						<li class="list__item">
 							<a class="nav__link" href="./about.html">ABOUT US</a>
@@ -105,22 +105,285 @@
 				<section class="menu__section">
 					<aside class="menu__section__aside">
 						<ul class="menu__list">
-							<li class="manu__list__item">01 Preferences</li>
+							<li class="menu__list__item">
+								<p class="menu__text titles">01</p>
+								<p class="menu__text titles">Preferences</p>
+							</li>
 							<hr width="255" class="menu__list__line" />
-							<li class="manu__list__item">02 Bean Type</li>
+							<li class="menu__list__item">
+								<p class="menu__text titles">02</p>
+								<p class="menu__text titles">Bean Type</p>
+							</li>
 							<hr width="255" class="menu__list__line" />
-							<li class="manu__list__item">03 Quantity</li>
+							<li class="menu__list__item">
+								<p class="menu__text titles">03</p>
+								<p class="menu__text titles">Quantity</p>
+							</li>
 							<hr width="255" class="menu__list__line" />
-							<li class="manu__list__item">04 Grind Option</li>
+							<li class="menu__list__item">
+								<p class="menu__text titles">04</p>
+								<p class="menu__text titles">Grind Option</p>
+							</li>
 							<hr width="255" class="menu__list__line" />
-							<li class="manu__list__item">05 Deliveries</li>
+							<li class="menu__list__item">
+								<p class="menu__text">05</p>
+								<p class="menu__text">Deliveries</p>
+							</li>
 						</ul>
 					</aside>
-					<div class="menu__section__list">
-                              
-                         </div>
+					<div class="menu__section__cards">
+						<div class="cards__one">
+							<div class="cards__one__title">
+								<h3 class="menu__cars--title">
+									How do you drink your coffee?
+								</h3>
+								<img
+									src="./imgs/strelka.svg"
+									alt="icon"
+									width="18"
+									height="12" />
+							</div>
+							<div class="cards__one-card">
+								<div class="card__first">
+									<h4 class="card__first__title">Capsule</h4>
+									<p class="card__first__text">
+										Compatible with Nespresso systems and similar
+										brewers
+									</p>
+								</div>
+								<div class="card__first" id="for__nth">
+									<h4 class="card__first__title for__color">Filter</h4>
+									<p class="card__first__text for__color">
+										For pour over or drip methods like Aeropress,
+										Chemex, and V60
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">Espresso</h4>
+									<p class="card__first__text">
+										Dense and finely ground beans for an intense,
+										flavorful experience
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="cards__one">
+							<div class="cards__one__title">
+								<h3 class="menu__cars--title">What type of coffee?</h3>
+								<img
+									src="./imgs/strelka.svg"
+									alt="icon"
+									width="18"
+									height="12" />
+							</div>
+							<div class="cards__one-card">
+								<div class="card__first">
+									<h4 class="card__first__title">Single Origin</h4>
+									<p class="card__first__text">
+										Distinct, high quality coffee from a specific
+										family-owned farm
+									</p>
+								</div>
+								<div class="card__first" id="for__nth">
+									<h4 class="card__first__title for__color">Decaf</h4>
+									<p class="card__first__text for__color">
+										Just like regular coffee, except the caffeine has
+										been removed
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">Blended</h4>
+									<p class="card__first__text">
+										Combination of two or three dark roasted beans of
+										organic coffees
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="cards__one">
+							<div class="cards__one__title">
+								<h3 class="menu__cars--title">
+									How much would you like?
+								</h3>
+								<img
+									src="./imgs/strelka.svg"
+									alt="icon"
+									width="18"
+									height="12" />
+							</div>
+							<div class="cards__one-card">
+								<div class="card__first" id="for__nth">
+									<h4 class="card__first__title for__color">250g</h4>
+									<p class="card__first__text for__color">
+										Perfect for the solo drinker. Yields about 12
+										delicious cups.
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">500g</h4>
+									<p class="card__first__text">
+										Perfect option for a couple. Yields about 40
+										delectable cups.
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">1000g</h4>
+									<p class="card__first__text">
+										Perfect for offices and events. Yields about 90
+										delightful cups.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="cards__one">
+							<div class="cards__one__title">
+								<h3 class="menu__cars--title">
+									Want us to grind them?
+								</h3>
+								<img
+									src="./imgs/strelka.svg"
+									alt="icon"
+									width="18"
+									height="12" />
+							</div>
+							<div class="cards__one-card">
+								<div class="card__first">
+									<h4 class="card__first__title">Wholebean</h4>
+									<p class="card__first__text">
+										Best choice if you cherish the full sensory
+										experience
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">Filter</h4>
+									<p class="card__first__text">
+										For drip or pour-over coffee methods such as V60
+										or Aeropress
+									</p>
+								</div>
+								<div class="card__first" id="for__nth">
+									<h4 class="card__first__title for__color">
+										Cafetiére
+									</h4>
+									<p class="card__first__text for__color">
+										Course ground beans specially suited for french
+										press coffee
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="cards__one">
+							<div class="cards__one__title">
+								<h3 class="menu__cars--title">
+									How often should we deliver?
+								</h3>
+								<img
+									src="./imgs/strelka.svg"
+									alt="icon"
+									width="18"
+									height="12" />
+							</div>
+							<div class="cards__one-card">
+								<div class="card__first" id="for__nth">
+									<h4 class="card__first__title for__color">
+										Every week
+									</h4>
+									<p class="card__first__text for__color">
+										$7.20 per shipment. Includes free first-class
+										shipping.
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">Every 2 weeks</h4>
+									<p class="card__first__text">
+										$9.60 per shipment. Includes free priority
+										shipping.
+									</p>
+								</div>
+								<div class="card__first">
+									<h4 class="card__first__title">Every month</h4>
+									<p class="card__first__text">
+										$12.00 per shipment. Includes free priority
+										shipping.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="order">
+							<div class="order__block">
+								<h4 class="order__title texts">Order Summary</h4>
+								<blockquote class="order__block__quote titles">
+									“I drink my coffee as
+									<span class="order__block__quote__span">Filter</span>
+									, with a<span class="order__block__quote__span">
+										Decaf</span
+									>
+									type of bean.
+									<span class="order__block__quote__span">250g</span>
+									ground ala
+									<span class="order__block__quote__span"
+										>Cafetiare</span
+									>, sent to me
+									<span class="order__block__quote__span"
+										>Every Week</span
+									>.”
+								</blockquote>
+							</div>
+							<a href="#" class="titles order__block__btn"
+								>Create your plan</a
+							>
+						</div>
+					</div>
 				</section>
 			</div>
 		</main>
+		<footer class="footer subscribe__footer">
+			<div class="container footer__section">
+				<div class="footer__nav">
+					<a href="#">
+						<img
+							src="./imgs/footer.svg "
+							alt="logo"
+							class="logo"
+							width="236"
+							height="26" />
+					</a>
+					<ul class="footer__nav__list">
+						<li class="list__item">
+							<a class="footer__nav__link" href="#">HOME</a>
+						</li>
+						<li class="list__item">
+							<a class="footer__nav__link" href="#">ABOUT US</a>
+						</li>
+						<li class="list__item">
+							<a class="footer__nav__link" href="#">Create your plan</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer__networks">
+					<a href="#" class="footer__networks_icon">
+						<img
+							src="./imgs/facebook.svg"
+							alt="facebook"
+							width="24"
+							height="24" />
+					</a>
+					<a href="#" class="footer__networks_icon">
+						<img
+							src="./imgs/twitter.svg"
+							alt="twitter"
+							width="24"
+							height="24" />
+					</a>
+					<a href="#" class="footer__networks_icon">
+						<img
+							src="./imgs/instagram.svg"
+							alt="instagram"
+							width="24"
+							height="24" />
+					</a>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
