--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 							<a class="nav__link" href="./about.html">ABOUT US</a>
 						</li>
 						<li class="list__item">
-							<a class="nav__link" href="#">Create your plan</a>
+							<a class="nav__link" href="./subscribe.html"
+								>Create your plan</a
+							>
 						</li>
 					</ul>
 				</nav>
@@ -38,8 +40,9 @@
 					<div class="hero">
 						<h1 class="hero__title titles">Great coffee made simple.</h1>
 						<p class="hero__subtitle texts">
-							Start your mornings with the world’s best coffees. Try our expertly
-							curated artisan coffees from our best roasters <br />
+							Start your mornings with the world’s best coffees. Try our
+							expertly curated artisan coffees from our best roasters
+							<br />
 							delivered directly to your door, at your schedule.
 						</p>
 						<a href="#" class="hero__btn titles">Create your plan</a>
@@ -59,8 +62,8 @@
 								height="193" />
 							<h3 class="card__title titles">Gran Espresso</h3>
 							<p class="card__description texts">
-								Light and flavorful blend with cocoa and black pepper for an intense
-								experience
+								Light and flavorful blend with cocoa and black pepper
+								for an intense experience
 							</p>
 						</div>
 						<div class="card__one">
@@ -71,8 +74,8 @@
 								height="193" />
 							<h3 class="card__title titles">Planalto</h3>
 							<p class="card__description texts">
-								Brazilian dark roast with rich and velvety body, and hints of fruits
-								and nuts
+								Brazilian dark roast with rich and velvety body, and
+								hints of fruits and nuts
 							</p>
 						</div>
 						<div class="card__one">
@@ -83,8 +86,8 @@
 								height="193" />
 							<h3 class="card__title titles">Piccollo</h3>
 							<p class="card__description texts">
-								Mild and smooth blend featuring notes of toasted almond and dried
-								cherry
+								Mild and smooth blend featuring notes of toasted almond
+								and dried cherry
 							</p>
 						</div>
 						<div class="card__one">
@@ -95,8 +98,8 @@
 								height="193" />
 							<h3 class="card__title titles">Danche</h3>
 							<p class="card__description texts">
-								Ethiopian hand-harvested blend densely packed with vibrant fruit
-								notes
+								Ethiopian hand-harvested blend densely packed with
+								vibrant fruit notes
 							</p>
 						</div>
 					</div>
@@ -105,12 +108,14 @@
 				<section class="choose__section">
 					<div class="choose">
 						<div class="choose__description">
-							<h2 class="choose__description__title titles">Why choose us?</h2>
+							<h2 class="choose__description__title titles">
+								Why choose us?
+							</h2>
 							<p class="choose__description__text texts">
-								A large part of our role is choosing which particular coffees will
-								be featured in our range. This means working closely with the best
-								coffee growers to give you a more impactful experience on every
-								level.
+								A large part of our role is choosing which particular
+								coffees will be featured in our range. This means
+								working closely with the best coffee growers to give you
+								a more impactful experience on every level.
 							</p>
 						</div>
 						<div class="choose__cards">
@@ -120,12 +125,14 @@
 									alt="coffe icon"
 									width="72"
 									height="72" />
-								<h3 class="card__title titles choose__cards__one__title">
+								<h3
+									class="card__title titles choose__cards__one__title">
 									Best quality
 								</h3>
-								<p class="card__description texts choose__cards__one__description">
-									Discover an endless variety of the world’s best artisan coffee
-									from each of our roasters.
+								<p
+									class="card__description texts choose__cards__one__description">
+									Discover an endless variety of the world’s best
+									artisan coffee from each of our roasters.
 								</p>
 							</div>
 							<div class="choose__cards__one">
@@ -134,12 +141,14 @@
 									alt="coffe icon"
 									width="72"
 									height="72" />
-								<h3 class="card__title titles choose__cards__one__title">
+								<h3
+									class="card__title titles choose__cards__one__title">
 									Best quality
 								</h3>
-								<p class="card__description texts choose__cards__one__description">
-									Discover an endless variety of the world’s best artisan coffee
-									from each of our roasters.
+								<p
+									class="card__description texts choose__cards__one__description">
+									Discover an endless variety of the world’s best
+									artisan coffee from each of our roasters.
 								</p>
 							</div>
 							<div class="choose__cards__one">
@@ -148,12 +157,14 @@
 									alt="coffe icon"
 									width="72"
 									height="72" />
-								<h3 class="card__title titles choose__cards__one__title">
+								<h3
+									class="card__title titles choose__cards__one__title">
 									Best quality
 								</h3>
-								<p class="card__description texts choose__cards__one__description">
-									Discover an endless variety of the world’s best artisan coffee
-									from each of our roasters.
+								<p
+									class="card__description texts choose__cards__one__description">
+									Discover an endless variety of the world’s best
+									artisan coffee from each of our roasters.
 								</p>
 							</div>
 						</div>
@@ -176,10 +187,12 @@
 									Pick your <br />
 									coffee
 								</h3>
-								<p class="card__description texts howitworks__card__description">
-									Select from our evolving range of artisan coffees. Our beans are
-									ethically sourced and we pay fair prices for them. There are new
-									coffees in all profiles every month for you to try out.
+								<p
+									class="card__description texts howitworks__card__description">
+									Select from our evolving range of artisan coffees.
+									Our beans are ethically sourced and we pay fair
+									prices for them. There are new coffees in all
+									profiles every month for you to try out.
 								</p>
 							</div>
 							<div class="howitworks-card">
@@ -188,10 +201,12 @@
 									Choose the <br />
 									frequency
 								</h3>
-								<p class="card__description texts howitworks__card__description">
-									Customize your order frequency, quantity, even your roast style
-									and grind type. Pause, skip or cancel your subscription with no
-									commitment through our online portal.
+								<p
+									class="card__description texts howitworks__card__description">
+									Customize your order frequency, quantity, even your
+									roast style and grind type. Pause, skip or cancel
+									your subscription with no commitment through our
+									online portal.
 								</p>
 							</div>
 							<div class="howitworks-card">
@@ -200,14 +215,18 @@
 									Receive and <br />
 									enjoy!
 								</h3>
-								<p class="card__description texts howitworks__card__description">
-									We ship your package within 48 hours, freshly roasted. Sit back
-									and enjoy award-winning world-class coffees curated to provide a
-									distinct tasting experience.
+								<p
+									class="card__description texts howitworks__card__description">
+									We ship your package within 48 hours, freshly
+									roasted. Sit back and enjoy award-winning world-class
+									coffees curated to provide a distinct tasting
+									experience.
 								</p>
 							</div>
 						</div>
-						<a href="#" class="howitworks__main__btn titles">Create your plan</a>
+						<a href="#" class="howitworks__main__btn titles"
+							>Create your plan</a
+						>
 					</div>
 				</section>
 			</div>
@@ -237,13 +256,25 @@
 				</div>
 				<div class="footer__networks">
 					<a href="#" class="footer__networks_icon">
-						<img src="./imgs/facebook.svg" alt="facebook" width="24" height="24" />
+						<img
+							src="./imgs/facebook.svg"
+							alt="facebook"
+							width="24"
+							height="24" />
 					</a>
 					<a href="#" class="footer__networks_icon">
-						<img src="./imgs/twitter.svg" alt="twitter" width="24" height="24" />
+						<img
+							src="./imgs/twitter.svg"
+							alt="twitter"
+							width="24"
+							height="24" />
 					</a>
 					<a href="#" class="footer__networks_icon">
-						<img src="./imgs/instagram.svg" alt="instagram" width="24" height="24" />
+						<img
+							src="./imgs/instagram.svg"
+							alt="instagram"
+							width="24"
+							height="24" />
 					</a>
 				</div>
 			</div>
